data/derived/fa15/progs/unify/prog3267.ml.out
Characters 27-28:
  let _ = fixpoint (collatz, 3);;
                             ^
Error: This expression has type int but an expression was expected of type
         bool
